--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
   flex-direction: column;
 }
 
-.game-tittle {
+.gameTittle {
   color: white;
   background-color: darkgreen;
   border: 6px solid purple;
@@ -25,7 +25,7 @@ body {
   font-family: 'Slackey', cursive;
 }
 
-.turn {
+.stateOfGame {
   color: white;
   background-color: darkgreen;
   border: 6px solid purple;
@@ -35,7 +35,7 @@ body {
   font-family: 'Slackey', cursive;
 }
 
-.game {
+.gameGrid {
   background-color: darkgreen;
   color: white;
   display: grid;
@@ -44,7 +44,7 @@ body {
   grid-template-columns: auto auto auto;
 }
 
-.game>div {
+.gameGrid>div {
   border: 6px solid purple;
   font-family: Helvetica;
   font-weight: bold;
@@ -54,7 +54,7 @@ body {
   align-items: center;
 }
 
-.game>div:hover {
+.gameGrid>div:hover {
   background-color: purple;
   border: 3px solid darkgreen;
 }
@@ -71,15 +71,15 @@ body {
   grid-template-rows: auto auto auto;
 }
 
-.players > div.player-x {
+.players > div.playerNameX {
   background-color: darkgreen;
 }
 
-.players > div.player-o {
+.players > div.playerNameO {
   background-color: darkgreen;
 }
 
-.button {
+.playAgainButton {
   font-family: 'Slackey', cursive;
   border: 6px solid purple;
   border-radius: 6px;
@@ -89,33 +89,25 @@ body {
   padding: 12px 21px
 }
 
-.button:hover {
+.playAgainButton:hover {
   background-color: purple;
 }
 
-.game > div.winner {
-  background: purple;
-}
-
-.game > div.winner > span {
-  color: white;
-}
-
 @media (min-width: 500px) {
-  .game {
+  .gameGrid {
     width: 300px;
     height: 300px;
     border-radius: 12px;
     border: 6px solid purple;
   }
 
-  .game>div {
+  .gameGrid>div {
     border-radius: 3px;
   }
 }
 
 @media (min-width: 1024px) {
-  .button {
+  .playAgainButton {
     cursor: pointer
   }
 }
