--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,30 @@ html, body {
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   background-color: black;
 }
 
 .divs {
   display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.left-side {
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  margin: 1%;
+}
+
+.right-side {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 1%;
 }
 
 .gameTittle {
@@ -23,9 +35,10 @@ body {
   background-color: darkgreen;
   border: 6px solid purple;
   border-radius: 6px;
-  padding: 1% 6%;
   margin: 1%;
   font-family: 'Slackey', cursive;
+  width: 300px;
+  text-align: center;
 }
 
 .gameTittle > h1 {
@@ -37,9 +50,9 @@ body {
   background-color: darkgreen;
   border: 6px solid purple;
   border-radius: 6px;
-  padding: 1% 9%;
-  margin: 1%;
   font-family: 'Slackey', cursive;
+  width: 300px;
+  margin: 1%;
 }
 
 .gameGrid {
@@ -48,6 +61,7 @@ body {
   display: grid;
   font-family: 'Slackey', cursive;
   grid-template-columns: auto auto auto;
+  margin: 1%;
 }
 
 .gameGrid>div {
@@ -67,15 +81,14 @@ body {
 }
 
 .players {
-  margin: 1%;
   border: 6px solid purple;
   border-radius: 6px;
   background-color: purple;
   color: white;
   font-family: 'Slackey', cursive;
-  display: grid;
-  grid-gap: 6px;
-  grid-template-rows: auto auto auto;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
 }
 
 .players > div.playerNameX {
